--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">CabifyTT</string>
+  <string name="app_name">CabifyTT</string>
+  <string name="pick_start">Origen</string>
+  <string name="pick_end">Destino</string>
 </resources>
