--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
   <string name="pick_start">Origen</string>
   <string name="pick_end">Destino</string>
   <string name="pick_search">Buscar</string>
+
+  <string name="example_name">Example Name Car</string>
+  <string name="example_description">Example Description</string>
+  <string name="example_price">3.00€</string>
 </resources>
