--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
   <string name="example_name">Example Name Car</string>
   <string name="example_description">Example Description</string>
   <string name="example_price">3.00€</string>
+  <string name="pick_sort">Sort by price</string>
+  <string name="pick_sort_cheap">Asc</string>
+  <string name="pick_sort_expensive">Desc</string>
 </resources>
